fix core set option fix set selection

--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row" id="global_filters">
 	<div class="col-md-12 text-right" style="margin-bottom:10px">
     <button class="btn btn-default btn-xs" type="button" id="filter-text-button">Filter help</button>
     <div class="btn-group">
