--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -3,18 +3,9 @@
 
 {% block body %}
 
-<style>
-table.chart		{ border-spacing: 10; }
-table.chart th		{ background-color: lightgrey; padding: 5px; text-align: left; }
-table.chart td		{ padding: 5px; }
-table.chart td.green	{ background-color: #addfad; text-align:justify; }
-table.chart td.red	{ background-color: #ffaaaa; }
-table.chart td.grey	{ background-color: lightgrey; text-align:center; font-style: italic; }
-div#rules li		{ margin-bottom: 20; }
-</style>
 
 
-<div class="main white container">
+<div class="main white container rules-reference">
 <div class="row">
 <div class="col-md-4">
 
