added link to github project

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -95,11 +95,9 @@
     <a href="https://reddit.com/user/kamalisk/" title="Reddit"><span class="fa fa-reddit"></span></a>
     <a href="mailto:s.arkhamdb@kamalisk.com" title="E-mail"><span class="fa fa-envelope"></span></a>
     </p>
-<!--
     <p>
-    Please post bug reports and feature requests on <a href="https://github.com/Alsciende/thronesdb/issues">GitHub</a>
+    Please post bug reports and feature requests on <a href="https://github.com/Kamalisk/arkhamdb">GitHub</a>
     </p>
--->
     <p>
     The information presented on this site about Arkham Horror: The Card Game, both literal and graphical, is copyrighted by Fantasy Flight Games.
     This website is not produced, endorsed, supported, or affiliated with Fantasy Flight Games.
