--- a/src/AppBundle/Resources/views/Export/octgn.xml.twig
+++ b/src/AppBundle/Resources/views/Export/octgn.xml.twig
@@ -1,35 +1,25 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <deck game="30c200c9-6c98-49a4-a293-106c06295c05" sleeveid="0">
   <section name="Investigator" shared="False">
-    <card qty="1" id="{{ deck.investigator.octgnId }}">{{ deck.faction.name }}</card>
+    <card qty="1" id="{{ deck.investigator.octgnId }}">{{ deck.investigator.name }}</card>
   </section>
-  <section name="Agenda" shared="False">
-{% if deck.agenda is not null %}
-    <card qty="1" id="{{ deck.agenda.octgnId }}">{{ deck.agenda.name }}</card>
-{% endif %}
-  </section>
-  <section name="Plots" shared="False">
-{% for slot in deck.slots_by_type.plot %}
-    <card qty="{{ slot.quantity }}" id="{{ slot.card.octgnId }}">{{ slot.card.name }}</card>
-{% endfor %}
-  </section>
-  <section name="Characters" shared="False">
-{% for slot in deck.slots_by_type.character %}
-    <card qty="{{ slot.quantity }}" id="{{ slot.card.octgnId }}">{{ slot.card.name }}</card>
-{% endfor %}
-  </section>
-  <section name="Locations" shared="False">
-{% for slot in deck.slots_by_type.location %}
-    <card qty="{{ slot.quantity }}" id="{{ slot.card.octgnId }}">{{ slot.card.name }}</card>
-{% endfor %}
-  </section>
-  <section name="Attachments" shared="False">
-{% for slot in deck.slots_by_type.attachment %}
+  <section name="Assets" shared="False">
+{% for slot in deck.slots_by_type.asset %}
     <card qty="{{ slot.quantity }}" id="{{ slot.card.octgnId }}">{{ slot.card.name }}</card>
 {% endfor %}
   </section>
   <section name="Events" shared="False">
 {% for slot in deck.slots_by_type.event %}
+    <card qty="{{ slot.quantity }}" id="{{ slot.card.octgnId }}">{{ slot.card.name }}</card>
+{% endfor %}
+  </section>
+  <section name="Skills" shared="False">
+{% for slot in deck.slots_by_type.skill %}
+    <card qty="{{ slot.quantity }}" id="{{ slot.card.octgnId }}">{{ slot.card.name }}</card>
+{% endfor %}
+  </section>
+  <section name="Treachery" shared="False">
+{% for slot in deck.slots_by_type.treachery %}
     <card qty="{{ slot.quantity }}" id="{{ slot.card.octgnId }}">{{ slot.card.name }}</card>
 {% endfor %}
   </section>
