--- a/src/AppBundle/Resources/views/Default/rulesreference.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.html.twig
@@ -7,9 +7,10 @@
 
 <div class="main white container rules-reference">
 
-<h1 id="rop">Rules Reference</h1>
 <div class="row">
 <div class="col-md-4">
+
+<h1 id="rop">Table of Contents</h1>
 
 <nav class="inner rop">
 <ul>
