--- a/src/AppBundle/Resources/views/Search/card-text.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-text.html.twig
@@ -1,3 +1,6 @@
 <div class="card-text border-{{ card.faction_code }}">
 	{{ card.text|raw }}
 </div>
+{% if card.victory %}
+	<div class="victory">Victory {{card.victory}}.</div>
+{% endif %}
