added victory to search

--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -184,6 +184,21 @@
 				</div>
 			</div>
     </div>
+    
+    <div class="col-sm-3">
+			<div class="form-group">
+				<label for="j">Victory</label>
+				<div class="row">
+					<div class="col-xs-5">
+						<select name="jo" id="jo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
+					</div>
+					<div class="col-xs-7">
+						<input id="j" name="j" value="" class="form-control">
+					</div>
+				</div>
+			</div>
+    </div>
+    
     <div class="col-sm-3">
         <div class="form-group">
 			<label for="y">Quantity</label>
