--- a/src/AppBundle/Resources/views/Reviews/reviews.html.twig
+++ b/src/AppBundle/Resources/views/Reviews/reviews.html.twig
@@ -2,7 +2,7 @@
 {% import "AppBundle::macros.html.twig" as macros %}
 
 {% block javascripts %}
-	{% javascripts '@AppBundle/Resources/public/js/ui.reviews.js' %}
+	{% javascripts '@AppBundle/Resources/public/js/ui.card.js' %}
 	<script src="{{ asset_url }}"></script>
 	{% endjavascripts %}
 {% endblock %}
@@ -48,7 +48,7 @@
 			</div>
 			<div class="review-content">
 				<div class="review-text">
-					<img src="/web/bundles/cards/{{ review.card.code }}.png" alt="{{ review.card.name }}" class="pull-right" style="width:120px;margin:0 0 10px 10px">
+					<img src="/web/bundles/cards/{{ review.card.code }}.jpg" alt="{{ review.card.name }}" class="pull-right" style="width:120px;margin:0 0 10px 10px" onerror="this.onerror=null;this.src='/web/bundles/cards/{{ review.card.code }}.png';">
 					{{ review.textHtml|raw }}
 				</div>
 				<div class="review-date">
