Link to style sheet override

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -25,6 +25,7 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"></script>
     <![endif]-->
 	{% block stylesheets %}{% endblock %}
+	<link rel="stylesheet" href="/style.css">
   </head>
   <body>
   <div id="wrapper">
@@ -90,7 +91,7 @@
     </ul>
 
     <p>
-    Based on ThronesDB by Alsciende. Modified by Kam.
+    Based on ThronesDB by Alsciende. Modified by Kam with contributions from logan-r.
     Contact:     
     <a href="https://reddit.com/user/kamalisk/" title="Reddit"><span class="fa fa-reddit"></span></a>
     <a href="mailto:s.arkhamdb@kamalisk.com" title="E-mail"><span class="fa fa-envelope"></span></a>
