--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -8,7 +8,7 @@
 <div class="row">
 
 <div class="col-md-4">
-	<h2>Browse by set</h2>
+	<h2 style="margin-top: 0;">Browse by set</h2>
 	{{ allsets | raw }}
 </div>
 
@@ -161,10 +161,10 @@
         <div class="form-group">
 			<label for="o">Cost</label>
 			<div class="row">
-                <div class="col-xs-5">
+                <div class="col-xs-6">
                     <select name="oo" id="oo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
-                <div class="col-xs-7">
+                <div class="col-xs-6" style="padding-left: 0;">
                     <input id="o" name="o" value="" class="form-control">
                 </div>
 			</div>
@@ -175,10 +175,10 @@
 			<div class="form-group">
 				<label for="p">XP</label>
 				<div class="row">
-					<div class="col-xs-5">
+					<div class="col-xs-6">
 						<select name="po" id="po" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
 					</div>
-					<div class="col-xs-7">
+					<div class="col-xs-6" style="padding-left: 0;">
 						<input id="p" name="p" value="" class="form-control">
 					</div>
 				</div>
@@ -189,10 +189,10 @@
 			<div class="form-group">
 				<label for="j">Victory</label>
 				<div class="row">
-					<div class="col-xs-5">
+					<div class="col-xs-6">
 						<select name="jo" id="jo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
 					</div>
-					<div class="col-xs-7">
+					<div class="col-xs-6" style="padding-left: 0;">
 						<input id="j" name="j" value="" class="form-control">
 					</div>
 				</div>
@@ -203,10 +203,10 @@
         <div class="form-group">
 			<label for="y">Quantity</label>
 			<div class="row">
-                <div class="col-xs-5">
+                <div class="col-xs-6">
                     <select name="yo" id="yo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
-                <div class="col-xs-7">
+                <div class="col-xs-6" style="padding-left: 0;">
                     <input id="y" name="y" value="" class="form-control">
                 </div>
 			</div>
@@ -219,10 +219,10 @@
         <div class="form-group">
 			<label for="w"><span class="icon-willpower"></span> Willpower</label>
 			<div class="row">
-                <div class="col-xs-5">
+                <div class="col-xs-6">
                     <select name="wo" id="wo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
-                <div class="col-xs-7">
+                <div class="col-xs-6" style="padding-left: 0;">
                     <input id="w" name="w" value="" class="form-control">
                 </div>
 			</div>
@@ -232,10 +232,10 @@
         <div class="form-group">
 			<label for="s"><span class="icon-combat"></span> Combat</label>
 			<div class="row">
-                <div class="col-xs-5">
+                <div class="col-xs-6">
                     <select name="co" id="co" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
-                <div class="col-xs-7">
+                <div class="col-xs-6" style="padding-left: 0;">
                     <input id="c" name="c" value="" class="form-control">
                 </div>
 			</div>
@@ -245,10 +245,10 @@
         <div class="form-group">
 			<label for="l"><span class="icon-intellect"></span> Intellect</label>
 			<div class="row">
-                <div class="col-xs-5">
+                <div class="col-xs-6">
                     <select name="io" id="io" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
-                <div class="col-xs-7">
+                <div class="col-xs-6" style="padding-left: 0;">
                     <input id="i" name="i" value="" class="form-control">
                 </div>
 			</div>
@@ -259,10 +259,10 @@
         <div class="form-group">
 			<label for="a"><span class="icon-agility"></span> Agility</label>
 			<div class="row">
-                <div class="col-xs-5">
+                <div class="col-xs-6">
                     <select name="ao" id="ao" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
-                <div class="col-xs-7">
+                <div class="col-xs-6" style="padding-left: 0;">
                     <input id="a" name="a" value="" class="form-control">
                 </div>
 			</div>
@@ -275,10 +275,10 @@
         <div class="form-group">
 			<label for="w"><span class="icon-health"></span> Health</label>
 			<div class="row">
-                <div class="col-xs-5">
+                <div class="col-xs-6">
                     <select name="ho" id="ho" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
-                <div class="col-xs-7">
+                <div class="col-xs-6" style="padding-left: 0;">
                     <input id="h" name="h" value="" class="form-control">
                 </div>
 			</div>
@@ -288,10 +288,10 @@
         <div class="form-group">
 			<label for="s"><span class="icon-sanity"></span> Sanity</label>
 			<div class="row">
-                <div class="col-xs-5">
+                <div class="col-xs-6">
                     <select name="so" id="so" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
-                <div class="col-xs-7">
+                <div class="col-xs-6" style="padding-left: 0;">
                     <input id="s" name="s" value="" class="form-control">
                 </div>
 			</div>
