Remove box-shadow from index page

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -3,12 +3,12 @@
 
 {% block body %}
 
-<div class="main container">
+<div class="main container" style="box-shadow: none;">
 <h1 class="site-title hidden-xs">ArkhamDB</h1>
 <div class="site-slogan">Deckbuilder and Card Database for the Arkham Horror LCG</div>
 </div> <!-- .container -->
 
-<div class="main container">
+<div class="main container" style="box-shadow: none;">
     <div class="row">
     {% for data in decklists_by_faction %}
     <div class="col-md-6" style="margin-bottom:30px">
